# tableplus-db-urls

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml  tox.ini
api/: public_api.contract.json  public_api.json
mkdocs/: .gitignore  Justfile  mkdocs.yml  pyproject.toml
mkdocs/docs/: index.md
mkdocs/docs/css/: extra.css
requirements/: requirements_dev.txt  requirements_test.txt
src/tableplus/: __init__.py  cli.py  core.py  logging.py  settings.py
src/tableplus/application/: __init__.py  connection_strings.py
src/tableplus/data/: tableplus.cfg
src/tableplus/domain/: __init__.py  errors.py  models.py  urls.py
src/tableplus/infrastructure/: __init__.py  env_loader.py
tests/: test_cli.py  test_core.py
