[project]
name = "docs"
version = "0.1.0"
description = "Project documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs<2",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material>=9.7.4",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-to-pdf>=0.10.1",
    "qrcode>=8.2",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]
